--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Go
 on:
   push:
     branches:
-      - main
+      - "**" # Matches any branch for commits
   pull_request:
     branches:
       - main
